[metadata]
name = ppmail
version = attr: ppmail.VERSION
description = Tool to send messages via Sendgrid/Slack
long_description = file: README.rst
license = GPLv3
author = Peter Pakos
author-email = peter.pakos@wandisco.com
url = https://github.com/peterpakos/ppmail
keywords = mail mailer sendgrid slack
classifiers =
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Topic :: Communications :: Email
    Topic :: Communications :: Chat

[options]
include_package_data = True
packages = ppmail
install_requires =
    pplogger
    sendgrid
    slackclient

[options.entry_points]
console_scripts =
    ppmail = ppmail.__main__:main

[bdist_wheel]
universal = 1

[aliases]
package = clean --all egg_info bdist_wheel sdist
release = package upload
testrelease = package upload -r testpypi